# llm-prompt-engineer

./: README.md  issue_explorer.py  llm_prompt_engineer.py  pyproject.toml
Utilities/: README.md
Utilities/llm-jina-engineer/: README.md  llm_jina.py  pyproject.toml
Utilities/llm-jina-engineer/llm_jina.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Utilities/llm-prompt-engineer/: github_issue_analyzer.py  rubric_prompt.xml
