[tool.poetry]
name = "llm-prompt-engineer"
version = "0.1.1"
description = "A prompt engineering tool for LLM, including few-shot and issue-based prompt generation"
authors = ["Your Name <you@example.com>"]


[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.llm]
prompt_engineer = "llm_prompt_engineer"
