[project]
name = "llm-jina"
version = "0.1"
description = "LLM plugin for using Jina AI Search Foundation APIs"
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm",
    "click",
    "requests"
]

[project.urls]
Homepage = "https://github.com/yourusername/llm-jina"
Changelog = "https://github.com/yourusername/llm-jina/releases"
Issues = "https://github.com/yourusername/llm-jina/issues"

[project.entry-points.llm]
jina = "llm_jina"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
addopts = "--disable-socket"

[tool.setuptools.packages.find]
include = ["llm_jina"]